# monarch

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  cabal.project  hie.yaml  interpreter.cabal  package.yaml  s  stack.yaml  test.beam  test.scm
.github/workflows/: analysis-ci.yml  domain-ci.yaml  haskell.yml  scv-ci.yaml
analyses/: README.md
analyses/ase/: .gitignore  analyze.sh  ase.cabal  benchmarks.txt  cabal.project  log.txt  out.txt  output.csv  package.yaml  programs.txt  programs_test.txt  test.txt  todo.md  todo.txt
analyses/ase/app/: Main.hs  Options.hs
analyses/ase/benchmarks-guile/: games_snake.rkt  games_snake.rkt.tmp  games_tetris.rkt  games_tetris.rkt.tmp  games_zombie.rkt  games_zombie.rkt.tmp  mochi_fold-div.rkt  mochi_fold-div.rkt.tmp  mochi_hors.rkt  mochi_hors.rkt.tmp  mochi_hrec.rkt  mochi_hrec.rkt.tmp  mochi_l-zipunzip.rkt  mochi_l-zipunzip.rkt.tmp  mochi_map-foldr.rkt  mochi_map-foldr.rkt.tmp  mochi_mappend.rkt  mochi_mappend.rkt.tmp  mochi_mem.rkt  mochi_mem.rkt.tmp  mochi_mult.rkt  mochi_mult.rkt.tmp  mochi_neg.rkt  mochi_neg.rkt.tmp  mochi_nth0.rkt  mochi_nth0.rkt.tmp  mochi_r-file.rkt  mochi_r-file.rkt.tmp  mochi_r-lock.rkt  mochi_r-lock.rkt.tmp  mochi_reverse.rkt  mochi_reverse.rkt.tmp  mochi_sum.rkt  mochi_sum.rkt.tmp  mochi_zip.rkt  mochi_zip.rkt.tmp  sergey_blur.rkt  sergey_blur.rkt.tmp  sergey_eta.rkt  sergey_eta.rkt.tmp  (+30 more)
analyses/erlang/: cabal.project  erlang-analyzer.cabal  package.yaml
analyses/erlang-core/: cabal.project  erlang-analyzer.cabal  package.yaml
analyses/pureactor/: .gitignore  cabal.project  dotviewer.py  pureactor.cabal
analyses/pureactor/app/: Main.hs  Visualizer.hs
analyses/pureactor/programs/test/: ping.pa
analyses/pureactor/scripts/: python.sh  requirements.txt
analyses/pureactor/src/Analysis/: Fixpoint.hs  PureActor.hs
analyses/pureactor/src/Analysis/PureActor/: Semantics.hs
analyses/pureactor/src/Analysis/PureActor/Mailbox/: Graph.hs  Partitioned.hs
analyses/pureactor/src/Analysis/PureActor/Mailbox/Graph/: Dot.hs
analyses/pureactor/src/Analysis/PureActor/Mailbox/Partitioned/: Graph.hs  Partitions.hs
analyses/pureactor/src/Analysis/PureActor/Mailbox/Partitioned/Partitions/: SenderPartition.hs  TestPartition.hs  UnitPartition.hs
analyses/pureactor/src/Domain/: PureActor.hs
analyses/pureactor/src/Language/: PureActor.hs
analyses/pureactor/src/Language/PureActor/: AST.hs  Compiler.hs
analyses/pureactor/tests/: CompilerSpec.hs
analyses/simpleactor/: .gitignore  CHANGELOG.md  README.md  aargh.txt  ase-todo.md  cabal.project  cell.core  hie.yaml  interpreter.cabal  log.txt  out.csv  out.txt  output.txt  package.yaml  ping.rkt  primitive-contracts.rkt  programs.txt  reduced.scm  simple.rkt  simple.scm  simpleactor.cabal  stack.core  test.core  test.rkt  test.scm  todo.md
app/: Main.hs
examples/: run-lambda.sh
examples/maf2-lambda/: .gitignore  CHANGELOG.md  README.md  cabal.project  hie.yaml  maf2-lambda.cabal  package.yaml  stack.yaml
maf2-analysis/: README.md  cabal.project  maf2-analysis.cabal  maf2-hs.cabal  package.yaml  stack.yaml
maf2-analysis/app/: Entrypoints.hs  Main.hs
maf2-analysis/src/: Lib.hs  Test.hs
maf2-analysis/test/: MailboxSpec.hs  PythonSmokeSpec.hs  SchemeParserSpec.hs  SchemeSmokeSpec.hs  SoundnessSpec.hs  Spec.hs
maf2-domains/: README.md  cabal.project  cabal.project.freeze  maf2-domains.cabal  package.yaml  stack.yaml
maf2-domains/src/: Domain.hs  Lattice.hs
maf2-domains/test/: DictionaryDomainSpec.hs  LatticeSpec.hs  Spec.hs
maf2-hs/: TODO.txt  maf2-hs.cabal  package.yaml  stack.yaml
maf2-hs/test/: DictionaryDomainSpec.hs  LatticeSpec.hs
maf2-monads/: maf2-monads.cabal  package.yaml
maf2-pypdg/: .gitignore  cabal.project  hie.yaml  maf2-pypdg.cabal  package.yaml  stack.yaml
maf2-pypdg/app/: Main.hs
maf2-scv/: CHANGELOG.md  README.md  cabal.project  maf2-scv.cabal  package.yaml  stack.yaml
maf2-scv/app/: Main.hs
maf2-scv/smt/: prelude.scm
maf2-scv/src/: Solver.hs
maf2-scv/test/: Spec.hs  TH.hs
maf2-syntax/: README.md  Setup.hs  cabal.project  cabal.project.freeze  maf2-syntax.cabal  package.yaml  stack.yaml
maf2-syntax/preludes/: actor.scm  scheme.scm
maf2-syntax/src/: Lib.hs  Syntax.hs
maf2-typelevel/: README.md  maf2-typelevel.cabal  package.yaml
paper/: main.tex  sources.bib
racket/: cfcp.rkt  utils.rkt
racket/run/: translate-combinators.rkt  translate-full.rkt
racket/tests/: infra.rkt
racket/translations/: actor-cc-translation.rkt  actor-translation.rkt  cc-combinator.rkt
scripts/: build-docker.sh
src/: GenericInterpreter.hs  Interpreter.hs
src/Analysis/: SimpleActor.hs
src/Domain/: SimpleActor.hs
src/Syntax/: AST.hs  Compiler.hs  Simplifier.hs
tools/: README.md
tools/python-ifc-lsp/: hie.yaml  python-ifc-lsp.cabal
tools/python-ifc-lsp/app/: Analysis.hs  LSP.hs  Main.hs
tools/python-ifc-lsp/examples/: direct.py  implicit.py  indirect.py
tools/python-ifc-lsp/examples/demo/: example001.py  example002.py  example003.py  example004.py
tools/python-vscode/: .eslintrc.json  .vscodeignore  README.md  package-lock.json  package.json  tsconfig.json
typelevel/: CHANGELOG.md  README.md  package.yaml  stack.yaml  typelevel.cabal
typelevel/src/: TypeLevel.hs
(+3850 files in other folders)
