cabal-version: 3.0
name: pureactor
version: 1.0
build-type: Simple

library pureactor-lib
  build-depends:
     base >= 4 && < 5
   , relude
   , mtl
   , maf2-syntax
   , maf2-analysis
   , maf2-domains
  exposed-modules:
    Language.PureActor
    Domain.PureActor
    Analysis.PureActor
  other-modules:
    Language.PureActor.AST
    Language.PureActor.Compiler
    Analysis.PureActor.Semantics
    Analysis.Fixpoint
  hs-source-dirs: src
  default-language: GHC2021
  mixins:   base hiding (Prelude)
          , relude (Relude as Prelude)
          , relude
  default-extensions:
      LambdaCase
    , PatternSynonyms
    , FunctionalDependencies
    , TypeFamilies
  ghc-options: -Wall -Werror

executable pureactor-exe
  build-depends:
      base >= 4 && < 5
    , relude
    , pureactor-lib
  default-language: GHC2021
  mixins:   base hiding (Prelude)
          , relude (Relude as Prelude)
          , relude
  hs-source-dirs: app
  main-is: Main.hs
  ghc-options: -Wall -Werror


test-suite pureactor-tests
  type: exitcode-stdio-1.0
  build-depends:
        base >= 4 && < 5
      , pureactor-lib
      , hspec
      , hspec-contrib
  default-language: GHC2021
  default-extensions:
    LambdaCase 
  hs-source-dirs: tests
  other-modules:
    CompilerSpec
  main-is: TestSuite.hs
  ghc-options: -Wall -Werror
