cabal-version: 3.0
name: pureactor
version: 1.0
build-type: Simple

library pureactor-lib
  build-depends:
     base >= 4 && < 5
   , relude
   , mtl
   , lens
   , maf2-syntax
   , maf2-analysis
   , maf2-domains
  exposed-modules:
    Language.PureActor
    Domain.PureActor
    Analysis.PureActor
    Analysis.PureActor.Semantics
    Analysis.PureActor.Mailbox.Graph
    Analysis.PureActor.Mailbox.Graph.Dot
    Analysis.PureActor.Mailbox.Partitioned.Graph
    Analysis.PureActor.Mailbox.Partitioned
    Analysis.PureActor.Mailbox.Partitioned.Partitions.UnitPartition
    Analysis.PureActor.Mailbox.Partitioned.Partitions.SenderPartition
    Analysis.PureActor.Mailbox.Partitioned.Partitions
  other-modules:
    Language.PureActor.AST
    Language.PureActor.Compiler
    Analysis.Fixpoint
  hs-source-dirs: src
  default-language: GHC2021
  mixins:   base hiding (Prelude)
          , relude (Relude as Prelude)
          , relude
  default-extensions:
      LambdaCase
    , PatternSynonyms
    , FunctionalDependencies
    , TypeFamilies
  ghc-options: -Wall -Werror -O3

executable pureactor-exe
  build-depends:
      base >= 4 && < 5
    , relude
    , pretty-simple
    , pureactor-lib
    , lucid
    , containers
    , lens
    , maf2-domains
  default-language: GHC2021
  mixins:   base hiding (Prelude)
          , relude (Relude as Prelude)
          , relude
  hs-source-dirs: app
  main-is: Main.hs
  other-modules: 
  ghc-options: -Wall -Werror -O3


test-suite pureactor-tests
  type: exitcode-stdio-1.0
  build-depends:
        base >= 4 && < 5
      , pureactor-lib
      , hspec
      , hspec-contrib
  default-language: GHC2021
  default-extensions:
    LambdaCase 
  hs-source-dirs: tests
  other-modules:
    CompilerSpec
  main-is: TestSuite.hs
  ghc-options: -Wall -Werror
